--- a/myapp/config/database.yml
+++ b/myapp/config/database.yml
@@ -17,7 +17,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: postgres
+  user: postgres
   password: root
   host: localhost
   # For details on connection pooling, see Rails configuration guide
